--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -7,7 +7,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../../GitHub/emilycheesecake.github.io/projects/SodaZone/index.html"
+export_path="../emilycheesecake.github.io/projects/SodaZone/index.html"
 script_export_mode=1
 script_encryption_key=""
 
@@ -18,17 +18,7 @@ custom_template/release=""
 variant/export_type=0
 vram_texture_compression/for_desktop=true
 vram_texture_compression/for_mobile=false
-html/export_icon=true
 html/custom_html_shell="res://exports/htmlshell/customshell.html"
 html/head_include="<title>Soda Zone Demo</title>"
 html/canvas_resize_policy=0
-html/focus_canvas_on_start=false
 html/experimental_virtual_keyboard=false
-progressive_web_app/enabled=false
-progressive_web_app/offline_page=""
-progressive_web_app/display=1
-progressive_web_app/orientation=0
-progressive_web_app/icon_144x144=""
-progressive_web_app/icon_180x180=""
-progressive_web_app/icon_512x512=""
-progressive_web_app/background_color=Color( 0, 0, 0, 1 )
