--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -7,7 +7,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../emilycheesecake.github.io/projects/SodaZone/index.html"
+export_path="../emilycheesecake.github.io/projects/ufg/index.html"
 script_export_mode=1
 script_encryption_key=""
 
@@ -20,7 +20,7 @@ vram_texture_compression/for_desktop=true
 vram_texture_compression/for_mobile=false
 html/export_icon=true
 html/custom_html_shell="res://exports/htmlshell/customshell.html"
-html/head_include="<title>Soda Zone Demo</title>"
+html/head_include="<title>Untitled Frog Game - emilyy.games</title>"
 html/canvas_resize_policy=0
 html/focus_canvas_on_start=true
 html/experimental_virtual_keyboard=false
