--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,12 @@
 assets/*
+
+# Godot-specific ignores
+.import/
+export.cfg
+export_presets.cfg
+
+# Mono-specific ignores
+.mono/
+data_*/
+
+*.log
